--- a/pages/development/android/AnimationDrawable.textile
+++ b/pages/development/android/AnimationDrawable.textile
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Android AnimationDrawable 逐帧动画
+title: AnimationDrawable
+description: Android逐帧动画
 ---
-
-h1. {{ page.title }}
-
-* *一、XML资源文件* res/drawable/spin_animation.xml
-
-<pre class="brush: xml">
+<section>
+    <div class="page-header">
+        <h1>一、XML资源文件 <small>res/drawable/spin_animation.xml</small></h1>
+    </div>
+<pre class="prettyprint">
 <animation-list android:id="selected" android:oneshot="false">
    <item android:drawable="@drawable/wheel0" android:duration="50" />
    <item android:drawable="@drawable/wheel1" android:duration="50" />
@@ -17,10 +17,13 @@ h1. {{ page.title }}
    <item android:drawable="@drawable/wheel5" android:duration="50" />
 </animation-list>
 </pre>
+</section>
 
-* *二、使用*
-
-<pre class="brush: java; toolbar: false;">
+<section>
+    <div class="page-header">
+        <h1>二、使用</h1>
+    </div>
+<pre class="prettyprint">
 ImageView img = (ImageView)findViewById(R.id.spinning_wheel_image);
 // 设置动画
 img.setBackgroundResource(R.drawable.spin_animation);
@@ -29,5 +32,6 @@ AnimationDrawable frameAnimation = (AnimationDrawable) img.getBackground();
 // 启动动画
 frameAnimation.start();
 </pre>
+</section>
 
 p. 更多参数访问 "http://developer.android.com/reference/android/graphics/drawable/AnimationDrawable.html":http://developer.android.com/reference/android/graphics/drawable/AnimationDrawable.html
