--- a/pages/development/android.textile
+++ b/pages/development/android.textile
@@ -3,33 +3,34 @@ layout: default
 category: Android
 title: Android
 description: Android记录
-navigation: [四大组件, UI, c]
+tags: [android, abc]
+navigation: [组件, 控件, 动画, 线程, 常用, 优化, 网络, 资料, 安全, 多媒体]
 ---
 
 <section id="1">
   <div class="page-header">
-    <h1>四大组件 <small>Join buttons for more toolbar-like functionality</small></h1>
+    <h1>一、组件</h1>
   </div>
 
-*(1#101) *Activity* %(title)Activity%
-** "Activity生命周期":http://www.linguofeng.com/2011/09/special-edition-_activity-android-life-cycle.html
+* *Activity* - 活动
+** "Activity生命周期":http://developer.android.com/guide/components/activities.html#Lifecycle
 ** "PreferenceActivity的使用":android/PreferenceActivity.html
 
-*(1#102) *Service* - 服务 %(title)服务%
+* *Service* - 服务
 ** "startService":android/startService.html
 ** "bindService":android/bindService.html
 ** "AIDL":android/AIDL.html - Android Interface Definition Language(接口描述语言，用于进程通信)
 ** "IntentService":android/IntentService.html - 异步服务，方便处理耗时任务
 
-*(1#103) *BroadcastReceiver* - 广播接收者 %(title)广播接收者%
+* *BroadcastReceiver* - 广播接收
 
-*(1#104) *ContentProvider* - 内容提供者 %(title)内容提供者%
+* *ContentProvider* - 内容提供者
 
 </section>
 
 <section id="2">
   <div class="page-header">
-    <h1>Android UI控件 <small>Join buttons for more toolbar-like functionality</small></h1>
+    <h1>二、控件</h1>
   </div>
 
 * "TextView":java.html - 文本
@@ -43,58 +44,64 @@ navigation: [四大组件, UI, c]
 
 </section>
 
-h3(#3). Android动画 %(title)动画%
+<section id="3">
+    <div class="page-header">
+        <h1>三、动画</h1>
+    </div>
 
-
-*(3#301) *Tween Animation* %(title)Tween%
+* *Tween Animation*
 ** "平移":android/TranslateAnimation.html - TranslateAnimation
 ** "渐变":android/AlphaAnimation.html - AlphaAnimation
 ** "缩放":android/ScaleAnimation.html - ScaleAnimation
 ** "旋转":android/RotateAnimation.html - RotateAnimation
 
-*(3#302) *Frame Animation* %(title)Frame%
+* *Frame Animation*
 ** "逐帧动画":android/AnimationDrawable.html - AnimationDrawable
+</section>
 
-h3(#4). Threads线程 %(title)线程%
+<section id="4">
+    <div class="page-header">
+        <h1>四、线程</h1>
+    </div>
+
+* "AsyncTask 异步任务":android/AsyncTask.html
+</section>
 
 
-*(4#41) "AsyncTask 异步任务":android/AsyncTask.html %(title)AsyncTask%
-
-h3(#5). 常用 %(title)常用%
-
-
-*(5#501) *获取当前系统版本号* %(title)获取系统版本%
+<section id="5">
+    <div class="page-header">
+        <h1>五、常用</h1>
+    </div>
+* *获取当前系统版本号*
 
 
 pre. android.os.Build.VERSION.SDK_INT
 
-*(5#502) *横屏显示* %(title)横屏显示%
+* *横屏显示*
 
 
 pre. <activity android:screenOrientation="landscape"
 
-*(5#503) *全屏无标题栏显示* %(title)全屏无标题栏显示%
+* *全屏无标题栏显示*
 
 
 pre. <application android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
 
-*(5#504) *无标题栏显示* %(title)无标题栏显示%
+* *无标题栏显示*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 <!-- XML实现 -->
 <application android:theme="@android:style/Theme.Black.NoTitleBar" />
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // JAVA实现
 requestWindowFeature(Window.FEATURE_NO_TITLE);
 </pre>
 
-*(#505) *自定义标题栏布局* %(title)%
+* *自定义标题栏布局*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 1.Activity：
 // 声明使用自定义标题
 requestWindowFeature(Window.FEATURE_CUSTOM_TITLE);
@@ -103,7 +110,7 @@ setContentView(R.layout.main);
 getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 <!-- 2.XML：main_title.xml -->
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -141,10 +148,9 @@ getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 </RelativeLayout>
 </pre>
 
-*(5#506) *自定义标题栏背景与高度* (上面只是自定义标题栏的而已，而背景与高度还是没有变化，接下来就要处理标题栏背景与高度) %(title)自定义标题栏%
+* *自定义标题栏背景与高度* (上面只是自定义标题栏的而已，而背景与高度还是没有变化，接下来就要处理标题栏背景与高度)
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 <!-- 1.创建value/styles.xml文件 -->
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
@@ -161,8 +167,7 @@ getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 <activity android:name=".MainActivity" android:theme="@style/title" />
 </pre>
 
-*(5#507) *ListView滚动加载更新数据* %(title)ListView滚动更新%
-
+* *ListView滚动加载更新数据*
 
 <pre class="prettyprint linenums">
 ListView.setOnScrollListener(new OnScrollListener() {
@@ -182,10 +187,9 @@ ListView.setOnScrollListener(new OnScrollListener() {
 });
 </pre>
 
-*(5#508) *异常处理* (提示用户把异常信息回馈给公司) %(title)异常处理%
+* *异常处理* (提示用户把异常信息回馈给公司)
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 //==================================================================================
 //= 1.实现UncaughtExceptionHandler接口
 //==================================================================================
@@ -237,7 +241,7 @@ class ExceptionHandler implements UncaughtExceptionHandler {
 }
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
  //=================================================================================
 //= 2.让应用统一使用自定义的异常处理类
 //==================================================================================
@@ -250,10 +254,9 @@ public class App extends Application {
 }
 </pre>
 
-*(5#509) *在子线程中使用主线程的消息队列* %(title)子线程消息%
+* *在子线程中使用主线程的消息队列*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 创建消息队列
 Looper.prepare();
 // 在消息队列中执行
@@ -262,19 +265,17 @@ Toase.makeText(this, "我是在子线程中利用Looper消息队列实现显示"
 Looper.loop();
 </pre>
 
-*(5#510) *获取应用版本号并在线更新应用* %(title)在线更新应用%
+* *获取应用版本号并在线更新应用*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 PackageInfo pi = Context.getPackageManager().getPackageInfo(Context.getPackageName(), 0);
 // 版本
 pi.versionName;
 </pre>
 
-*(5#511) *杀死后台进程* %(title)杀死后台进程%
+* *杀死后台进程*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 如果系统版本小于2.2的话
 if (android.os.Build.VERSION.SDK_INT < 8) {  
     actMag.restartPackage("packageName");  
@@ -283,10 +284,9 @@ if (android.os.Build.VERSION.SDK_INT < 8) {
 } 
 </pre>
 
-*(5#513) *发短信/彩信* %(title)发短信%
+* *发短信/彩信*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 标准
 SmsManager smsManager = SmsManager.getDefault();
 String message = "短信内容，有可能超过70个字符";
@@ -303,14 +303,13 @@ if (message > 70) {
 }
 </pre>
 
-*(5#514) *Intent用法全面总结* %(title)常用Intent%
+* *Intent用法全面总结*
 
 ** "Intent用法全面总结":android/Intent.html
 
-*(5#515) *判断sdcard是否存在* %(title)sdcard是否存在%
+* *判断sdcard是否存在*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 public boolean isSdCardExists() { 
     if (Environment.getExternalStorageState().equals(Environment.MEDIA_MOUNTED)) { 
         return true; 
@@ -320,10 +319,9 @@ public boolean isSdCardExists() {
 }
 </pre>
 
-*(5#516) *判断某个服务是否正在运行* %(title)服务是否正在运行%
+* *判断某个服务是否正在运行*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 public boolean isServiceRunning(String serviceName) { 
     ActivityManager manager = (ActivityManager) ctx.getSystemService(Context.ACTIVITY_SERVICE); 
     for (RunningServiceInfo svc : manager.getRunningServices(Integer.MAX_VALUE)) { 
@@ -335,9 +333,9 @@ public boolean isServiceRunning(String serviceName) {
 }
 </pre>
 
-*(5#517) *获取已安装的软件信息* %(title)获取已安装软件信息%
+* *获取已安装的软件信息*
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 public List<HashMap<String, Object>> getInstalledApps() { 
     List<ApplicationInfo> pkgs = ctx.getPackageManager().getInstalledApplications(0); 
     
@@ -363,20 +361,22 @@ public List<HashMap<String, Object>> getInstalledApps() {
 }
 </pre>
 
-*(5#517) *隐藏键盘*
+* *隐藏键盘*
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 InputMethodManager imm = ((InputMethodManager)getSystemService(Context.INPUT_METHOD_SERVICE));
 imm.hideSoftInputFromWindow(this.getCurrentFocus().getWindowToken(),InputMethodManager.HIDE_NOT_ALWAYS);
 </pre>
+</section>
 
-h3(#6). 优化 %(title)优化%
+<section id="6">
+    <div class="page-header">
+        <h1>六、优化</h1>
+    </div>
 
+* *ListView优化*
 
-*(6#601) *ListView优化* %(title)ListView优化%
-
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 class ViewHolder{
     TextView mTextView;
 }
@@ -392,10 +392,9 @@ public View getView(...){
 }
 </pre>
 
-*(6#602) *图片缓存* 软引用办法实现缓存 %(title)图片缓存%
+* *图片缓存* 软引用办法实现缓存
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 集合
 Map<String, SoftReference<Bitmap>> imageCache = new HashMap<String, SoftReference<Bitmap>>();
 
@@ -408,16 +407,19 @@ if (imageCache.containsKey(imageUrl)) {
 imageCache.put(imageUrl, new SoftReference<Drawable>(bitmap));
 </pre>
 
-*(6#603) *使用线程池优化性能* %(title)线程池%
+* *使用线程池优化性能*
 
 ** "ThreadPool":android/ThreadPool.html
 
-*(6#604) *完成退出程序* %(title)完全退出%
+* *完成退出程序*
 
 ** "完成退出程序":android/exitApplication.html
+</section>
 
-h3(#7). 网络编程 %(title)网络编程%
-
+<section id="7">
+    <div class="page-header">
+        <h1>七、网络编程</h1>
+    </div>
 
 * *URL* & *URLConnection* （常用于下载文件）
 ** 下载文件
@@ -434,32 +436,33 @@ h3(#7). 网络编程 %(title)网络编程%
 * *AndroidHttpClient*
 
 * *Socket* （TCP & UDP）
+</section>
 
-h3(#8). 资源 %(title)资源%
+<section id="8">
+    <div class="page-header">
+        <h1>八、资源</h1>
+    </div>
 
+* *drawable*
 
-*(8#801) *drawable* %(title)drawable%
-
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 <!-- XML中使用该类型资源 -->
 <ImageView android:src="@drawable/icon" />
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // java中使用该类型资源
 Drawable icon = getResources().getDrawable(R.drawable.icon);
 </pre>
 
-*(8#802) *values* %(title)values%
+* *values*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 <!-- XML中使用该类型资源 -->
 <TextView android:text="@string/text" />
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // java中使用该类型资源
 
 // 对应：<string name="text">xxx</string>
@@ -472,23 +475,24 @@ String[] texts = getResources().getStringArray(R.array.texts);
 int color = getResources().getColor(R.color.black);
 </pre>
 
-*(8#803) *raw* %(title)raw%
+* *raw*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 InputStream in = getResources().openRawResource(R.raw.test);
 </pre>
 
-*(8#804) *assets* %(title)assets%
+* *assets*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 AssetManager assetManager = getResources().getAssets();
 InputStream is = assetManager.open("文件名", MODE_APPEND);
 </pre>
+</section>
 
-h3(#9). 安全专题 %(title)安全专题%
-
+<section id="9">
+    <div class="page-header">
+        <h1>九、安全专题</h1>
+    </div>
 
 * *基本介绍*
 
@@ -535,7 +539,7 @@ h3(#9). 安全专题 %(title)安全专题%
 * *0权限重启手机*
 
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 0权限重启手机
 Intent intent = new Intent(Intent.ACTION_REBOOT);
 // 重启等待时间
@@ -552,7 +556,7 @@ sendBroadcast(intent);
 // java -jar signapk.jar platform.x509.pem platform.pk8 原.apk 后.apk
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 0权限重启手机（JNI版：Toast底层就是使用JNI）
 while(true){
     Toast toast = new Toast(this);
@@ -565,7 +569,7 @@ while(true){
 * *0权限开机启动* （Android系统漏洞）
 
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 <!-- BootCompleteReceiver需要继承BroadcastReceiver -->
 <receiver android:name=".BootCompleteReceiver">
     <intent-filter>
@@ -577,7 +581,7 @@ while(true){
 <!-- uses-permission / -->
 </pre>
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 public class BootCompleteReceiver extends BroadcastReceiver {
     public void onReceive(Context context, Intent intent) {
         
@@ -602,7 +606,7 @@ public class BootCompleteReceiver extends BroadcastReceiver {
 * *Logcat实操* 目的：通过服务获取手机的所有日志并上传到服务器
 
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 public class ReadLogService extends Service {
 
     public IBinder onBind(Intext intext) {
@@ -634,7 +638,7 @@ public class ReadLogService extends Service {
 * *0权限访问网络* （上传）
 
 
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 public class ViewWebService extends Service {
     ScreenOFFBroadcastReceiver off;
     ScreenONBroadcastReceiver on;
@@ -703,14 +707,16 @@ public class ViewWebService extends Service {
     };
 }
 </pre>
+</section>
 
-h3(#10). 多媒体 %(title)多媒体%
+<section id="10">
+    <div class="page-header">
+        <h1>十、多媒体</h1>
+    </div>
 
+* *从相册中获取图片*
 
-*(10#1001) *从相册中获取图片* %(title)获取图片%
-
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 打开相册的意图
 Intent intent = new Intent(Intent.ACTION_PICK);
 intent.setType("image/*");
@@ -725,10 +731,9 @@ public void onActivityResult(...) {
 }
 </pre>
 
-*(10#1002) *从相册中获取图片并按屏幕大小比例缩放显示* %(title)比例缩放%
+* *从相册中获取图片并按屏幕大小比例缩放显示*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 获取屏幕宽高
 Display display = getWindowManager().getDefaultDisplay();
 display.getWidth();
@@ -741,10 +746,9 @@ Math.deil(bfo.outHeight / display.getHeight());
 Math.deil(bfo.outWidth / display.getWidth());
 </pre>
 
-*(10#1003) *获取图片Exif信息* %(title)Exif信息%
+* *获取图片Exif信息*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 ExifInterface exif = ExifInterface("图片路径");
 // 获取
 exif.getAttribute(ExifInterface.对应的常量);
@@ -752,10 +756,9 @@ exif.getAttribute(ExifInterface.对应的常量);
 exif.setAttribute(ExifInterface.对应的常量, "值");
 </pre>
 
-*(10#1004) *创建Bitmap拷贝* %(title)Bitmap拷贝%
+* *创建Bitmap拷贝*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 原图
 Bitmap source = BitmapFactory...
 //创建空白的Bitmap： 宽、高、原图的配置属性
@@ -772,17 +775,15 @@ canvas.drawBitmap(source, matrix, paint);
 Btimap bak = bitmap;
 </pre>
 
-*(10#1005) *图形缩放（Scale）、旋转（Rotate）、平移（Translate）* %(title)图形缩旋平%
-
+* *图形缩放（Scale）、旋转（Rotate）、平移（Translate）*
 
 <pre>
 Matrix类的使用
 </pre>
 
-*(10#1006) *颜色处理* %(title)颜色处理%
+* *颜色处理*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // ColorMatrix类的使用
 ColorMatrix.set(new float[]{
     1,0,0,0,0
@@ -798,28 +799,26 @@ ColorMatrix.set(new float[]{
 });
 </pre>
 
-*(10#1007) *图片合成* %(title)图片合成%
+* *图片合成*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 混合模式PorterDuffXfermode
 Paint.setXfermode(new PorterDuffXfermode(android.graphics.PorterDuff.Mode.MULTIPLY));
 </pre>
 
-*(10#1008) *Path路径文字* 弧度 %(title)Path路径文字%
+* *Path路径文字* 弧度
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // Path类与Canvas.drawTextOnPath()方法的使用
 
 // 模拟SD卡被装载的广播
 //new Intent(ACTION_MEDIA_MOUNTED, Uri.aprse("file:///"));
 </pre>
 
-*(10#1009) *人脸识别* 弧度 %(title)人脸识别%
+* *人脸识别*
 
-
-<pre class="prettyprint linenums">
+<pre class="prettyprint">
 // 人脸识别
 // FaceDetector类的使用
 </pre>
+</section>
